--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </div>
         <div class="send-message">
-            <img src="/images/email.png" alt="">
+            <img src="./images/email.png" alt="">
             <form action="">
                 <p>Щоб дізнаватися усі новини фестивалю, підпишися на нашу розсилку</p>
                 <input type="text" placeholder="Ім'я">
@@ -120,4 +120,5 @@
         </div>
     </section>
 </body>
+
 </html>
