--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header class="header-container">
         <img src="./images/star.png" class="logo" alt="Логотип"/>
         <ul class="menu-list">
-                <li class="menu-item">Контакти</li>
-                <li class="menu-item">Головна</li>
-                <li class="menu-item">Із чим ми допомагаємо</li>
+                <li class="menu-item"><a href="#contacts">Контакти</a></li>
+                <li class="menu-item"><a href="#">Головна</a></li>
+                <li class="menu-item"><a href="#description">Із чим ми допомагаємо</a></li>
                 <li class="menu-item blue-button">Підтримати фонд</li>
         </ul>
     </header>
@@ -33,7 +33,7 @@
     </section>
 
     <!-- Description screen -->
-    <section class="description-screen">
+    <section id ="description" class="description-screen">
         <article class="description-title">
             <h1 class="title-header" >Ми – фонд підтримки постраждалих від війни</h1>
             <h3 class="title-sub-header">Наша мета – психологічна та гуманітарна допомога українцям</h3>
@@ -93,7 +93,7 @@
     </section>
 
     <!-- Contacts screen -->
-    <section class="contacts-screen">
+    <section id="contacts" class="contacts-screen">
         <div class="contacts">
             <h1 class="title-header">Контакти</h1>
             <div class="items-contact">
@@ -122,3 +122,4 @@
 </body>
 
 </html>
+
