--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <!-- First-screen -->
-    <section class="first-screen">
+    <section id ="description" class="first-screen">
         <article class="first-screen-container">
             <h1 class="main-title">Фонд<br>підтримки<br> постраждалих<br>від війни</h1>
             <h3 class="main-description">Ми хочемо допомогти кожному, хто<br>постраждав під час війни</h3>
@@ -33,7 +33,7 @@
     </section>
 
     <!-- Description screen -->
-    <section id ="description" class="description-screen">
+    <section  class="description-screen">
         <article class="description-title">
             <h1 class="title-header" >Ми – фонд підтримки постраждалих від війни</h1>
             <h3 class="title-sub-header">Наша мета – психологічна та гуманітарна допомога українцям</h3>
@@ -122,4 +122,5 @@
 </body>
 
 </html>
+
 
