--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <!-- First-screen -->
-    <section id ="description" class="first-screen">
+    <section class="first-screen">
         <article class="first-screen-container">
             <h1 class="main-title">Фонд<br>підтримки<br> постраждалих<br>від війни</h1>
             <h3 class="main-description">Ми хочемо допомогти кожному, хто<br>постраждав під час війни</h3>
@@ -41,7 +41,7 @@
         </article>
        
         <!-- First block -->
-        <article class="description-block">
+        <article id ="description"  class="description-block">
                 <div class="flex-wrapper">
                 <h4 class="desc-header">Психологічна допомога</h4>
                 <h3 class="desc-sub-header">Ми підбираємо психотерапевта під за індивідуальним запитом</h3>
@@ -122,5 +122,6 @@
 </body>
 
 </html>
+
 
 
