--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <!-- Sait-header -->
     <header class="header-container">
-        <img src="./images/star.png" class="logo" alt="Логотип"/>
+        <a href="#">
+            <img src="./images/star.png" class="logo" alt="Логотип"/>
+        </a>
         <ul class="menu-list">
                 <li class="menu-item"><a href="#contacts">Контакти</a></li>
                 <li class="menu-item"><a href="#">Головна</a></li>
@@ -122,6 +124,7 @@
 </body>
 
 </html>
+
 
 
 
